<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coffeeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEB887">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="374dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/order_coffee"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#046307"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coffeeCup"
        android:layout_width="283dp"
        android:layout_height="238dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/coffeecup" />

    <CheckBox
        android:id="@+id/sweetCream"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:onClick="checkBox"
        android:text="@string/sweet_cream"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup" />

    <CheckBox
        android:id="@+id/frenchVanilla"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="checkBox"
        android:text="@string/french_vanilla"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sweetCream" />

    <CheckBox
        android:id="@+id/irishCream"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:onClick="checkBox"
        android:text="@string/irish_cream"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frenchVanilla" />

    <CheckBox
        android:id="@+id/mocha"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:onClick="checkBox"
        android:text="@string/mocha"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/frenchVanilla"
        app:layout_constraintTop_toBottomOf="@+id/caramel" />

    <CheckBox
        android:id="@+id/caramel"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:onClick="checkBox"
        android:text="@string/caramel"
        android:textColor="#FFFFFF"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sweetCream"
        app:layout_constraintTop_toBottomOf="@+id/coffeeCup" />

    <Spinner
        android:id="@+id/size"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <Spinner
        android:id="@+id/quantitiy"
        android:layout_width="160dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <Button
        android:id="@+id/addCToOrder"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cSubTotal"
        android:layout_width="116dp"
        android:layout_height="34dp"
        android:text="@string/subtotal3"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/addCToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantitiy"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/cSubTotal2"
        android:layout_width="179dp"
        android:layout_height="38dp"
        android:text="@string/subtotal3"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/addCToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantitiy" />

</androidx.constraintlayout.widget.ConstraintLayout>