<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/donutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFE0">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="374dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/order_donut"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FF69B4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="409dp"
        android:layout_height="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/addToOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycleView"
        app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/subTotal"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:text="@string/subtotal2"
        app:layout_constraintBottom_toBottomOf="@+id/addToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toEndOf="@+id/addToOrder"
        app:layout_constraintTop_toTopOf="@+id/addToOrder"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/subTotal2"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:text="@string/subtotal3"
        app:layout_constraintBottom_toBottomOf="@+id/addToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toEndOf="@+id/addToOrder"
        app:layout_constraintTop_toTopOf="@+id/addToOrder"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>