<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:background=" #FFC0CB"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="374dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Rutgers Cafe"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#b934d3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/order_donut1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donuts"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/order_coffee1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/coffee"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/order_yourbag1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bag"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/order_storeorder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/storeOrder"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/donuts"
        android:layout_width="179dp"
        android:layout_height="165dp"
        android:layout_marginTop="176dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donut" />

    <ImageButton
        android:id="@+id/coffee"
        android:layout_width="176dp"
        android:layout_height="165dp"
        android:layout_marginTop="176dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/donuts"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee" />

    <ImageButton
        android:id="@+id/bag"
        android:layout_width="162dp"
        android:layout_height="158dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donuts"
        app:srcCompat="@drawable/bag" />

    <ImageButton
        android:id="@+id/storeOrder"
        android:layout_width="162dp"
        android:layout_height="158dp"
        android:layout_marginTop="112dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toEndOf="@+id/bag"
        app:layout_constraintTop_toBottomOf="@+id/coffee"
        app:srcCompat="@drawable/clipboard" />

</androidx.constraintlayout.widget.ConstraintLayout>